# colloet_and_exercise

./: .gitignore  CMakeLists.txt  README.md  static_reflect.cpp  static_reflect.h  static_reflect_json.h
.cache/clangd/index/: reflect.cpp.C141809579093E70.idx
design_pattern/: CMakeLists.txt
design_pattern/cp/: singleton.cpp
static_reflect/: CMakeLists.txt  static_reflect_json.h
static_reflect/example/: example_complex.cpp  example_jsoncpp.cpp  example_pybind.cpp  example_static_reflect.cpp
study_beast/: CMakeLists.txt  http_client.cpp
study_http_server/: CMakeLists.txt  chat_server.cpp  http_client.h  http_client.hpp  http_codec.h  http_server.h  io_context.h  stop_source.h  timer_context.h
study_http_server/example/: sample_client.cpp  sample_server.cpp
study_http_server/include/: bearssl.h  sha1.hpp
study_http_server/include/bearssl/: bearssl.hpp  impl.hpp
study_http_server/static/: index.html
